@@ -9,6 +9,18 @@ Newest entry first; every non-approval is recorded, including one a repair later
 
 The coordinate build applied its class-specific initialization flags through graalvmNative.binaries.all rather than the test binary. FS-test-contract.2.7 requires native build flags to be as narrow as possible. Removing the flags reproduced the transitive Azure Core image-heap initialization failure, confirming that the flags themselves are necessary; only their binary scope needed correction.
 
+## 2026-09-20 — org.aspectj:aspectjweaver:1.9.21.1 (#9373)
+
+**Test-created native flag and weakened runtime coverage**
+
+The contribution rewrote a test class file to preview bytecode and added --enable-preview to the JVM and Native Image solely for that test, violating the native flag necessity rule in FS-test-contract.2.7 because the need originated in test code rather than AspectJ. It also removed the existing generated-concrete-aspect behavior from ClassLoaderWeavingAdaptorTest instead of preserving that meaningful behavior, violating the no-weakening repair rule in FS-test-contract.2.9.
+
+## 2026-09-20 — org.checkerframework:checker-qual:3.46.0 (#9374)
+
+**Generated Java test class was not public**
+
+The added Checker_qualTest top-level class was declared package-private, violating FS-test-contract.1.2, which requires every top-level test class to be public. The violation was wholly within the target coordinate's new test source and was repairable under FS-contribution-contract.5.1.
+
 ## 2026-09-18 — io.micronaut:micronaut-http-client-core:5.1.11 (#10079)
 
 **Test dependencies pin the requested artifact version**
